# LmsPs

./: .gitignore  README.md  mcp.extension.json  pyproject.toml
scripts/: start_ps_mcp_stdio.ps1  start_ps_mcp_stdio.sh
src/lmsps/: server - Copy.py  server.py
tests/: test_server.py
