[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lmsps"
version = "0.1.0"
description = "LM Studio MCP server for persistent PowerShell sessions"
authors = [{ name = "Block Goose", email = "goose@block.xyz" }]
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "mcp>=0.1.0",
  "psutil>=5.9",
]

[project.scripts]
lmsps = "lmsps.server:main"

[tool.setuptools.packages.find]
where = ["src"]
